Tailles img. Accessibility stars. Mobile max-width cards et centrage

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                     <div class="cards-container">
                         <article>
-                            <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                            <img src="assets/img/small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
@@ -95,19 +95,17 @@
 
                             <p>Nuit à partir de <strong>25€</strong></p>
 
-                            <!-- V1 Accessibility rating icons -->
-                            <div class="rating">
-                                <i class="fas fa-star checked" aria-hidden="true"></i>
-                                <i class="fas fa-star checked" aria-hidden="true"></i>
-                                <i class="fas fa-star checked" aria-hidden="true"></i>
-                                <i class="fas fa-star checked" aria-hidden="true"></i>
-                                <i class="fas fa-star" aria-hidden="true"></i>
-                                <span class="sr-only">Note: 4 sur 5</span>
+                            <div class="rating" role="img" aria-label="Note: 4 sur 5">
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star " role="img" aria-hidden="true"></i>
                             </div>
                         </article>
 
                         <article>
-                            <img src="assets/img/4_small/port.jpg" alt="Chambre hôtel du port">
+                            <img src="assets/img/small/port.jpg" alt="Chambre hôtel du port">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails hôtel du port">Hôtel du port</a>
@@ -115,8 +113,7 @@
 
                             <p>Nuit à partir de <strong>52€</strong></p>
 
-                            <!-- V2 Accessibility rating icons -->
-                            <div class="rating" role="img" aria-label="Note: 4 sur 5">
+                            <div class="rating" role="img" aria-label="Note: 5 sur 5">
                                 <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
                                 <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
                                 <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
@@ -126,7 +123,7 @@
                         </article>
 
                         <article>
-                            <img src="assets/img/4_small/mouettes.jpg" alt="Chambre Hôtel Les mouettes">
+                            <img src="assets/img/small/mouettes.jpg" alt="Chambre Hôtel Les mouettes">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Hôtel Les mouettes">Hôtel Les mouettes</a>
@@ -134,17 +131,17 @@
 
                             <p>Nuit à partir de <strong>76€</strong></p>
 
-                            <div class="rating">
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star"></i>
+                            <div class="rating" role="img" aria-label="Note: 4 sur 5">
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star" role="img" aria-hidden="true"></i>
                             </div>
                         </article>
 
                         <article>
-                            <img src="assets/img/4_small/mer.jpg" alt="Chambre Hôtel de la mer">
+                            <img src="assets/img/small/mer.jpg" alt="Chambre Hôtel de la mer">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Hôtel de la mer">Hôtel de la mer</a>
@@ -152,35 +149,35 @@
 
                             <p>Nuit à partir de <strong>46€</strong></p>
 
-                            <div class="rating">
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                            <div class="rating" role="img" aria-label="Note: 3 sur 5">
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star" role="img" aria-hidden="true"></i>
                             </div>
                         </article>
 
                         <article>
-                            <img src="assets/img/4_small/panier.jpg" alt="Chambre Auberge Le Panier">
+                            <img src="assets/img/small/panier.jpg" alt="Chambre Auberge Le Panier">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Auberge Le Panier">Auberge Le Panier</a>
                             </h3>
 
                             <p>Nuit à partir de <strong>23€</strong></p>
-                            <div class="rating">
 
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star"></i>
+                            <div class="rating" role="img" aria-label="Note: 4 sur 5">
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star" role="img" aria-hidden="true"></i>
                             </div>
                         </article>
 
                         <article>
-                            <img src="assets/img/4_small/amina.jpg" alt="Chambre Hôtel chez Amina">
+                            <img src="assets/img/small/amina.jpg" alt="Chambre Hôtel chez Amina">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Hôtel chez Amina">Hôtel chez Amina</a>
@@ -188,12 +185,12 @@
 
                             <p>Nuit à partir de <strong>96€</strong></p>
 
-                            <div class="rating">
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
+                            <div class="rating" role="img" aria-label="Note: 5 sur 5">
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
                             </div>
                         </article>
                     </div>
@@ -210,7 +207,7 @@
                     <div class="cards-container">
                         <article>
                             <div class="img">
-                                <img src="assets/img/4_small/soleil.jpg" alt="Chambre Hôtel Le soleil du matin">
+                                <img src="assets/img/small/soleil.jpg" alt="Chambre Hôtel Le soleil du matin">
                             </div>
 
                             <div class="details-container">
@@ -220,19 +217,19 @@
 
                                 <p>Nuit à partir de <strong>128€</strong></p>
 
-                                <div class="rating">
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
+                                <div class="rating" role="img" aria-label="Note: 5 sur 5">
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
                                 </div>
                             </div>
                         </article>
 
                         <article>
                             <div class="img">
-                                <img src="assets/img/4_small/coeur_de_l_eau.jpg" alt="Chambre Au coeur de l'eau">
+                                <img src="assets/img/small/coeur_de_l_eau.jpg" alt="Chambre Au coeur de l'eau">
                             </div>
 
                             <div class="details-container">
@@ -242,19 +239,19 @@
 
                                 <p>Nuit à partir de <strong>71€</strong></p>
 
-                                <div class="rating">
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star"></i>
+                                <div class="rating" role="img" aria-label="Note: 4 sur 5">
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star" role="img" aria-hidden="true"></i>
                                 </div>
                             </div>
                         </article>
 
                         <article>
                             <div class="img">
-                                <img src="assets/img/4_small/bleu_blanc.jpg" alt="Chambre Hôtel Tout bleu et Blanc">
+                                <img src="assets/img/small/bleu_blanc.jpg" alt="Chambre Hôtel Tout bleu et Blanc">
                             </div>
 
                             <div class="details-container">
@@ -264,12 +261,12 @@
 
                                 <p>Nuit à partir de <strong>68€</strong></p>
 
-                                <div class="rating">
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star checked"></i>
-                                    <i class="fas fa-star"></i>
+                                <div class="rating" role="img" aria-label="Note: 4 sur 5">
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                                    <i class="fas fa-star" role="img" aria-hidden="true"></i>
                                 </div>
                             </div>
                         </article>
@@ -281,14 +278,14 @@
                 <h2>Activités à Marseille</h2>
                 <div class="cards-container">
                     <article class="activities-item single-item full">
-                        <img src="assets/img/4_small/vieux_port.jpg" alt="Vieux Port">
+                        <img src="assets/img/small/vieux_port.jpg" alt="Vieux Port">
 
                         <h3>
                             <a href="#" target="_blank" title="Le vieux port">Vieux Port</a>
                         </h3>
                     </article>
                     <article class="activities-item half">
-                        <img src="assets/img/4_small/pom_large.jpg" alt="Fort de Pomègues">
+                        <img src="assets/img/medium/pomegues.jpg" alt="Fort de Pomègues">
                 
                         <h3>
                             <a href="#" target="_blank" title="Fort de Pomègues">Fort de Pomègues</a>
@@ -296,7 +293,7 @@
                     </article>
 
                     <article class="activities-item quarter">
-                        <img src="assets/img/4_small/frioul.jpg" alt="Îles du Frioul">
+                        <img src="assets/img/small/frioul.jpg" alt="Îles du Frioul">
 
                         <h3>
                             <a href="#" target="_blank" title="Îles du Frioul">Îles du Frioul</a>
@@ -304,14 +301,14 @@
                     </article>
 
                     <article class="activities-item single-item full">
-                        <img src="assets/img/4_small/calanques.jpg" alt="Parc National des Calanques">
+                        <img src="assets/img/small/calanques.jpg" alt="Parc National des Calanques">
 
                         <h3>
                             <a href="#" target="_blank" title="Parc National des Calanques">Parc National des Calanques</a>
                         </h3>
                     </article>
                     <article class="activities-item quarter">
-                        <img src="assets/img/4_small/notre_dame.jpg" alt="Notre-Dame-de-la-Garde">
+                        <img src="assets/img/small/notre_dame.jpg" alt="Notre-Dame-de-la-Garde">
 
                         <h3>
                             <a href="#" target="_blank" title="Notre-Dame-de-la-Garde">Notre-Dame-de-la-Garde</a>
@@ -319,7 +316,7 @@
                     </article>
 
                     <article class="activities-item half">
-                        <img src="assets/img/4_small/longchamps.jpg" alt="Parc Longchamps">
+                        <img src="assets/img/small/longchamps.jpg" alt="Parc Longchamps">
 
                         <h3>
                             <a href="#" target="_blank" title="Parc Longchamps">Parc Longchamps</a>
