--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav role="navigation" aria-label="Menu principal">
                 <ul>
                     <li class="active">
-                        <a href="#results">Hébergements</a>
+                        <a href="#lodgings">Hébergements</a>
                     </li>
                     <li>
                         <a href="#activities">Activités</a>
