--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <a class="logo" href="#" title="Booki">
-                <img src="assets/img/Booki.png" srcset="assets/img/Booki@3x.png 3x" alt="Logo Booki">
+                <img src="images/logo/Booki.png" srcset="images/logo/Booki@3x.png 3x" alt="Logo Booki">
             </a>
 
             <nav role="navigation" aria-label="Menu principal">
@@ -87,7 +87,7 @@
 
                     <div class="cards-container">
                         <article>
-                            <img src="assets/img/small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                            <img src="images/small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
@@ -105,7 +105,7 @@
                         </article>
 
                         <article>
-                            <img src="assets/img/small/port.jpg" alt="Chambre hôtel du port">
+                            <img src="images/small/port.jpg" alt="Chambre hôtel du port">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails hôtel du port">Hôtel du port</a>
@@ -123,7 +123,7 @@
                         </article>
 
                         <article>
-                            <img src="assets/img/small/mouettes.jpg" alt="Chambre Hôtel Les mouettes">
+                            <img src="images/small/mouettes.jpg" alt="Chambre Hôtel Les mouettes">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Hôtel Les mouettes">Hôtel Les mouettes</a>
@@ -141,7 +141,7 @@
                         </article>
 
                         <article>
-                            <img src="assets/img/small/mer.jpg" alt="Chambre Hôtel de la mer">
+                            <img src="images/small/mer.jpg" alt="Chambre Hôtel de la mer">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Hôtel de la mer">Hôtel de la mer</a>
@@ -159,7 +159,7 @@
                         </article>
 
                         <article>
-                            <img src="assets/img/small/panier.jpg" alt="Chambre Auberge Le Panier">
+                            <img src="images/small/panier.jpg" alt="Chambre Auberge Le Panier">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Auberge Le Panier">Auberge Le Panier</a>
@@ -177,7 +177,7 @@
                         </article>
 
                         <article>
-                            <img src="assets/img/small/amina.jpg" alt="Chambre Hôtel chez Amina">
+                            <img src="images/small/amina.jpg" alt="Chambre Hôtel chez Amina">
 
                             <h3>
                                 <a href="#" target="_blank" title="Détails Hôtel chez Amina">Hôtel chez Amina</a>
@@ -207,7 +207,7 @@
                     <div class="cards-container">
                         <article>
                             <div class="img">
-                                <img src="assets/img/small/soleil.jpg" alt="Chambre Hôtel Le soleil du matin">
+                                <img src="images/small/soleil.jpg" alt="Chambre Hôtel Le soleil du matin">
                             </div>
 
                             <div class="details-container">
@@ -229,7 +229,7 @@
 
                         <article>
                             <div class="img">
-                                <img src="assets/img/small/coeur_de_l_eau.jpg" alt="Chambre Au coeur de l'eau">
+                                <img src="images/small/coeur_de_l_eau.jpg" alt="Chambre Au coeur de l'eau">
                             </div>
 
                             <div class="details-container">
@@ -251,7 +251,7 @@
 
                         <article>
                             <div class="img">
-                                <img src="assets/img/small/bleu_blanc.jpg" alt="Chambre Hôtel Tout bleu et Blanc">
+                                <img src="images/small/bleu_blanc.jpg" alt="Chambre Hôtel Tout bleu et Blanc">
                             </div>
 
                             <div class="details-container">
@@ -278,14 +278,14 @@
                 <h2>Activités à Marseille</h2>
                 <div class="cards-container">
                     <article class="activities-item single-item full">
-                        <img src="assets/img/small/vieux_port.jpg" alt="Vieux Port">
+                        <img src="images/small/vieux_port.jpg" alt="Vieux Port">
 
                         <h3>
                             <a href="#" target="_blank" title="Le vieux port">Vieux Port</a>
                         </h3>
                     </article>
                     <article class="activities-item half">
-                        <img src="assets/img/medium/pomegues.jpg" alt="Fort de Pomègues">
+                        <img src="images/medium/pomegues.jpg" alt="Fort de Pomègues">
                 
                         <h3>
                             <a href="#" target="_blank" title="Fort de Pomègues">Fort de Pomègues</a>
@@ -293,7 +293,7 @@
                     </article>
 
                     <article class="activities-item quarter">
-                        <img src="assets/img/small/frioul.jpg" alt="Îles du Frioul">
+                        <img src="images/small/frioul.jpg" alt="Îles du Frioul">
 
                         <h3>
                             <a href="#" target="_blank" title="Îles du Frioul">Îles du Frioul</a>
@@ -301,14 +301,14 @@
                     </article>
 
                     <article class="activities-item single-item full">
-                        <img src="assets/img/small/calanques.jpg" alt="Parc National des Calanques">
+                        <img src="images/small/calanques.jpg" alt="Parc National des Calanques">
 
                         <h3>
                             <a href="#" target="_blank" title="Parc National des Calanques">Parc National des Calanques</a>
                         </h3>
                     </article>
                     <article class="activities-item quarter">
-                        <img src="assets/img/small/notre_dame.jpg" alt="Notre-Dame-de-la-Garde">
+                        <img src="images/small/notre_dame.jpg" alt="Notre-Dame-de-la-Garde">
 
                         <h3>
                             <a href="#" target="_blank" title="Notre-Dame-de-la-Garde">Notre-Dame-de-la-Garde</a>
@@ -316,7 +316,7 @@
                     </article>
 
                     <article class="activities-item half">
-                        <img src="assets/img/small/longchamps.jpg" alt="Parc Longchamps">
+                        <img src="images/small/longchamps.jpg" alt="Parc Longchamps">
 
                         <h3>
                             <a href="#" target="_blank" title="Parc Longchamps">Parc Longchamps</a>
