--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="images/logo/Booki.png" srcset="images/logo/Booki@3x.png 3x" alt="Logo Booki">
             </a>
 
-            <nav role="navigation" aria-label="Menu principal">
+            <nav aria-label="Menu principal">
                 <ul>
                     <li class="active">
                         <a href="#lodgings">Hébergements</a>
