--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
                     </div>
                 </form>
 
-                <p class="info-results"><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+                <p class="info-results">
+                    <i class="fas fa-info"></i>
+                    Plus de 500 logements sont disponibles dans cette ville
+                </p>
             </section>
 
             <section id="results" class="results-container">
@@ -279,6 +282,7 @@
 
             <section id="activities" class="activities">
                 <h2>Activités à Marseille</h2>
+
                 <div class="cards-container">
                     <article class="activities-item full">
                         <img src="images/small/vieux_port.jpg" alt="Vieux Port">
@@ -287,6 +291,7 @@
                             <a href="#" target="_blank" title="Le vieux port">Vieux Port</a>
                         </h3>
                     </article>
+
                     <article class="activities-item half">
                         <img src="images/medium/pomegues.jpg" alt="Fort de Pomègues">
                 
@@ -310,6 +315,7 @@
                             <a href="#" target="_blank" title="Parc National des Calanques">Parc National des Calanques</a>
                         </h3>
                     </article>
+
                     <article class="activities-item quarter">
                         <img src="images/small/notre_dame.jpg" alt="Notre-Dame-de-la-Garde">
 
@@ -333,25 +339,25 @@
             <div class="footer-list">
                 <h4>A propos</h4>
                 <ul>
-                <li><a href="#">Fonctionnement du site</a></li>
-                <li><a href="#">Conditions générales de vente</a></li>
-                <li><a href="#">Données et confidentialité</a></li>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales de vente</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
                 </ul>
             </div>
 
             <div class="footer-list">
                 <h4>Nos hébergements</h4>
                 <ul>
-                <li><a href="#">Charte qualité</a></li>
-                <li><a href="#">Soumettre votre hôtel</a></li>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
                 </ul>
             </div>
 
             <div class="footer-list">
                 <h4>Assistance</h4>
                 <ul>
-                <li><a href="#">Centre d'aide</a></li>
-                <li><a href="#">Nous contacter</a></li>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
                 </ul>
             </div>
         </footer>
